# EzEngine2D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: Macros.cmake
test/: CMakeLists.txt  main.cpp
